# vig2p

./: .gitignore  README.md  pyproject.toml
tests/: test_core.py
vig2p/: __init__.py  cli.py  core.py
vig2p/_engine/: __init__.py  g2p.py  normalizer.py  pipeline.py  punc.py
