[project]
name = "vig2p"
version = "0.1.3"
description = "Vietnamese G2P helpers for Kokoro-compatible phonemes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
keywords = ["vietnamese", "g2p", "phonemes", "kokoro", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Vietnamese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
vig2p = "vig2p.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "twine>=5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vig2p*"]

[tool.setuptools.package-data]
"vig2p._engine" = ["lexicon.bin"]
